Fix title wraping

--- a/style.css
+++ b/style.css
@@ -161,8 +161,9 @@ a.home_image {
 
 #all-sidebar {
   color: #999;
-  padding-top: 90px;
 }
+
 #all-sidebar h4 {
   font-weight: normal;
+  margin-top: 0px;
 }
